# ur_tools

./: README.md
Universal_Robots_Client_Library/src/rtde/: data_package.cpp
Universal_Robots_ROS_Driver/ur_robot_driver/config/: ur5e_controllers.yaml
Universal_Robots_ROS_Driver/ur_robot_driver/launch/: ur_control.launch
Universal_Robots_ROS_Driver/ur_robot_driver/resources/: rtde_output_recipe.txt
Universal_Robots_ROS_Driver/ur_robot_driver/src/: hardware_interface.cpp
dual_arm_bringup/: CMakeLists.txt  package.xml
dual_arm_bringup/launch/: jacobian_demo.launch
dual_arm_bringup/launch/controllers/: robot_state_pub.launch  sim_controller_spawn.launch
dual_arm_bringup/launch/real/: dual_arm_real.launch  dual_external_control.launch
dual_arm_bringup/launch/sim/: sim_dual.launch  single_arm_simu.launch
dual_arm_bringup/launch/urdf/: dual.launch  single_urdf.launch  single_urdf_spawn.launch
dual_arm_control/: CMakeLists.txt  package.xml
dual_arm_control/config/: arm_controller.yaml
dual_arm_control/launch/controllers/: controller_spawn.launch
dual_arm_control/launch/real/: dual_arm_real.launch  dual_external_control.launch  dual_gripper.launch
dual_arm_control/launch/sim/: dual_arm_simu.launch  single_arm_simu.launch
dual_arm_control/launch/urdf/: dual.launch  single_urdf.launch  single_urdf_spawn.launch
universal_robot/ur_description/launch/: load_ur.launch
ur_pers_lib_pkg/: CMakeLists.txt  package.xml
ur_pers_lib_pkg/config/: arm_sim_controller.yaml
ur_pers_lib_pkg/include/ur_pers_lib_pkg/: Timer.cpp  Timer.hpp  hello_w.h
ur_pers_lib_pkg/include/ur_pers_lib_pkg/3DTransformations/: AngularVelocity.cpp  AngularVelocity.hpp  Homogeneus.cpp  Homogeneus.hpp  MatrixVectorRelations.cpp  MatrixVectorRelations.hpp  Roll_Pitch_Yaw.cpp  Roll_Pitch_Yaw.hpp
ur_pers_lib_pkg/include/ur_pers_lib_pkg/3DTransformations/Quaternion/: Quaternion_Operations.cpp  Quaternion_Operations.hpp  Quaternion_s.cpp  Quaternion_s.hpp
ur_pers_lib_pkg/include/ur_pers_lib_pkg/Controllers/: ComplianceControl.cpp  ComplianceControl.hpp  LQRController.cpp
ur_pers_lib_pkg/include/ur_pers_lib_pkg/Filters/: Filters.cpp  Filters.hpp
ur_pers_lib_pkg/include/ur_pers_lib_pkg/ForceSensor/: SensorReader.cpp  SensorReader.hpp
ur_pers_lib_pkg/include/ur_pers_lib_pkg/ForceSensor/FT_Reader/: SensorReader.cpp  SensorReader.hpp
ur_pers_lib_pkg/include/ur_pers_lib_pkg/ForceSensor/MassTorqueEstimation/: EeRots_for_MassEstimation.cpp  EeRots_for_MassEstimation.hpp  PayLoad_Id_LeastSquare.cpp  PayLoad_Id_LeastSquare.hpp
ur_pers_lib_pkg/include/ur_pers_lib_pkg/Ros_Controllers/: JS_Subscriber.cpp  JS_Subscriber.hpp  JointGroupPub.cpp  JointGroupPub.hpp  JointGroupPubSub.cpp  JointGroupPubSub.hpp
ur_pers_lib_pkg/include/ur_pers_lib_pkg/Trajectories/: Poly5Trajectory.cpp  Poly5Trajectory.hpp  ScaledTrajectory.cpp  ScaledTrajectory.hpp  Trajectory3D.cpp  Trajectory3D.hpp  TrapezoidalTrajectory.cpp  TrapezoidalTrajectory.hpp
ur_pers_lib_pkg/include/ur_pers_lib_pkg/UrToolKit/: SelfCollAvoidance.cpp  SelfCollAvoidance.hpp  Ur_ComplianceControl.cpp  Ur_ComplianceControl.hpp  Ur_JointGroupController.cpp  Ur_JointGroupController.hpp  Ur_TrajectoryExecution.cpp  Ur_TrajectoryExecution.hpp
ur_pers_lib_pkg/include/ur_pers_lib_pkg/UrToolKit/Ur_Utils/: UR_Types.hpp  Ur_DenavitHartenberg.cpp  Ur_DenavitHartenberg.hpp  Ur_JointNames.cpp  Ur_JointNames.hpp
ur_pers_lib_pkg/include/ur_pers_lib_pkg/UrToolKit/Ur_kins/: FindNearestConfiguration.cpp  FindNearestConfiguration.hpp  Kinematics.cpp  Kinematics.hpp
ur_pers_lib_pkg/launch/: jacobian_demo.launch
ur_pers_lib_pkg/launch/controllers/: sim_controller_spawn.launch
ur_pers_lib_pkg/launch/real/: dual_arm_real.launch  dual_external_control.launch  real_dual_arm.launch
ur_pers_lib_pkg/launch/sim/: dual_arm_simulation.launch  simu_dual_arm.launch  single_arm_simu.launch
ur_pers_lib_pkg/launch/urdf/: dual.launch  single_urdf.launch  single_urdf_spawn.launch
ur_pers_lib_pkg/robotiq_urdf/hand_e/: finger.xacro  hand_e.urdf.xacro  robotiq.xacro
ur_pers_lib_pkg/src/: 4pos_estimation.cpp  get_moveit_jacobian.cpp  gripper_estimation.cpp  hello_w.cpp  split_joint_state.cpp  test_compliance.cpp  test_trajectories.cpp  test_ur_kin.cpp
ur_pers_lib_pkg/xacro/: dual_ur_robotiq.xacro  single_ur_robotiq.xacro
